// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render ExpenseSummary correctly with 1 expense 1`] = `
<div>
  <h1>
    Viewing 
    1
     
    expense
     totalling 
    321
  </h1>
</div>
`;

exports[`should render ExpenseSummary correctly with many expense 1`] = `
<div>
  <h1>
    Viewing 
    22
     
    expenses
     totalling 
    321231
  </h1>
</div>
`;
